--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose --coverage",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
-    "roman-numerals": "github:Briss302/REG003-roman-numerals"
+    "roman-numerals": "Briss302/REG003-roman-numerals"
   },
   "devDependencies": {
     "jest": "^27.0.6"
