--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "keywords": [],
   "author": " Soni Sayago Salazar & Briceyda Diaz Quispe",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Briss302/REG003-roman-numerals-slack/issues"
   },
@@ -22,7 +22,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
-    "roman-numerals": "Briss302/REG003-roman-numerals.git"
+    "roman-numerals": "git+https://github.com/Briss302/REG003-roman-numerals.git"
   },
   "devDependencies": {
     "jest": "^27.0.6"
