--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
-    "roman-numerals": "github:Briss302/REG003-roman-numerals.git#09b44970-a349-4b1e-8313-2eb6aceeab6a"
+    "roman-numerals": "github:Briss302/REG003-roman-numerals.git"
   },
   "devDependencies": {
     "jest": "^27.0.6"
