--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "REG003-roman-numerals-slack",
   "version": "1.0.0",
-  "description": "* [1. Preámbulo](#1-preámbulo)\r * [2. Resumen del proyecto](#2-resumen-del-proyecto)\r * [3. Objetivos de aprendizaje](#3-objetivos-de-aprendizaje)\r * [4. Consideraciones generales](#4-consideraciones-generales)\r * [5. Criterios de aceptación mínimos del proyecto](#5-criterios-de-aceptación-mínimos-del-proyecto)\r * [6. Pistas, tips y lecturas complementarias](#6-pistas-tips-y-lecturas-complementarias)",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose --coverage",
@@ -14,6 +14,9 @@
   "keywords": [],
   "author": " Soni Sayago Salazar & Briceyda Diaz Quispe",
   "license": "MIT",
+  "engines": {
+    "node": ">=10"
+  },
   "bugs": {
     "url": "https://github.com/Briss302/REG003-roman-numerals-slack/issues"
   },
