--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "REG003-roman-numerals-slack",
   "version": "1.0.0",
-  "description": "",
+  "description": "* [1. Preámbulo](#1-preámbulo)\r * [2. Resumen del proyecto](#2-resumen-del-proyecto)\r * [3. Objetivos de aprendizaje](#3-objetivos-de-aprendizaje)\r * [4. Consideraciones generales](#4-consideraciones-generales)\r * [5. Criterios de aceptación mínimos del proyecto](#5-criterios-de-aceptación-mínimos-del-proyecto)\r * [6. Pistas, tips y lecturas complementarias](#6-pistas-tips-y-lecturas-complementarias)",
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose --coverage",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -13,10 +13,7 @@
   },
   "keywords": [],
   "author": " Soni Sayago Salazar & Briceyda Diaz Quispe",
-  "license": "MIT",
-  "engines": {
-    "node": ">=10"
-  },
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Briss302/REG003-roman-numerals-slack/issues"
   },
@@ -25,7 +22,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
-    "roman-numerals": "github:Briss302/REG003-roman-numerals.git"
+    "roman-numerals-sonibri": "^1.0.0"
   },
   "devDependencies": {
     "jest": "^27.0.6"
